config: reuirements.txt

--- a/nlw/.pre-commit-config.yaml
+++ b/nlw/.pre-commit-config.yaml
@@ -13,3 +13,6 @@ repos:
             "--rcfile=.pylintrc", # Link to your config file
             "--load-plugins=pylint.extensions.docparams", # Load an extension
           ]
+
+
+         minuto 37:00
